[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/menu_controller.gd" type="Script" id=1]
[ext_resource path="res://assets/main menu dasar.png" type="Texture" id=2]
[ext_resource path="res://tema_ui.tres" type="Theme" id=3]
[ext_resource path="res://assets/buttons/ensiclopedy.png" type="Texture" id=4]
[ext_resource path="res://assets/pop up exit dan delete.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Enlighten your Destiny.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/pop up about.png" type="Texture" id=7]
[ext_resource path="res://scripts/ensiklopedia_controller.gd" type="Script" id=8]
[ext_resource path="res://assets/ensiklopedia/tampilan encyclopedia 1.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/button kanan.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/button kiri.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]

font/size = 72
extra_spacing/bottom = 12
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 6 )

[node name="main_menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 724.0
script/script = ExtResource( 1 )

[node name="background_image" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="utama" type="Sprite" parent="background_image"]

transform/pos = Vector2( 512, 362 )
texture = ExtResource( 2 )

[node name="buttons" type="ReferenceFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="control_button" type="VBoxContainer" parent="buttons"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 162.0
margin/top = 236.0
margin/right = 449.0
margin/bottom = 508.0
custom_constants/separation = 40
alignment = 0

[node name="play_button" type="Button" parent="buttons/control_button"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 0.0
margin/right = 287.0
margin/bottom = 59.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="about_button" type="Button" parent="buttons/control_button"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 99.0
margin/right = 287.0
margin/bottom = 158.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "About"
flat = false

[node name="exit_button" type="Button" parent="buttons/control_button"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 198.0
margin/right = 287.0
margin/bottom = 257.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="ensiklopedia_button" type="TextureButton" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 879.0
margin/top = 9.0
margin/right = 1010.0
margin/bottom = 134.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="exit_container" type="ReferenceFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 724.0
margin/right = 14.0
margin/bottom = 738.0

[node name="Sprite 2" type="Sprite" parent="exit_container"]

transform/pos = Vector2( 512, 362 )
z/z = -1
texture = ExtResource( 5 )

[node name="yes_button" type="Button" parent="exit_container"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 630.0
margin/top = -352.0
margin/right = 841.0
margin/bottom = -442.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="no_button" type="Button" parent="exit_container"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 180.0
margin/top = -352.0
margin/right = 390.0
margin/bottom = -442.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="about_container" type="ReferenceFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -724.0
margin/right = 40.0
margin/bottom = -684.0

[node name="Sprite" type="Sprite" parent="about_container"]

transform/pos = Vector2( 512, 362 )
texture = ExtResource( 7 )

[node name="no_button" type="Button" parent="about_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 170.0
margin/top = 504.0
margin/right = 290.0
margin/bottom = 568.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ok"
flat = false

[node name="ensiklopedia_container" type="ReferenceFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1024.0
margin/top = 0.0
margin/right = -984.0
margin/bottom = 40.0
script/script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="ensiklopedia_container"]

transform/pos = Vector2( 512, 362 )
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1023, 724 )

[node name="no_button" type="Button" parent="ensiklopedia_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 454.0
margin/top = 630.0
margin/right = 574.0
margin/bottom = 694.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ok"
flat = false

[node name="next" type="TextureButton" parent="ensiklopedia_container"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 844.0
margin/top = 610.0
margin/right = 967.0
margin/bottom = 733.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="prev" type="TextureButton" parent="ensiklopedia_container"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = 610.0
margin/right = 217.0
margin/bottom = 733.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="pressed" from="buttons/control_button/play_button" to="." method="playAction"]

[connection signal="pressed" from="buttons/control_button/about_button" to="." method="aboutAction"]

[connection signal="pressed" from="buttons/control_button/exit_button" to="." method="_on_exit_button_pressed"]

[connection signal="pressed" from="buttons/ensiklopedia_button" to="." method="_on_ensiklopedia_button_pressed"]

[connection signal="pressed" from="exit_container/yes_button" to="." method="_on_exit_yes_button_pressed"]

[connection signal="pressed" from="exit_container/no_button" to="." method="_on_no_button_pressed"]

[connection signal="pressed" from="about_container/no_button" to="." method="_on_no_button_pressed"]

[connection signal="pressed" from="ensiklopedia_container/no_button" to="." method="_on_no_button_pressed"]

[connection signal="pressed" from="ensiklopedia_container/next" to="ensiklopedia_container" method="nextAction"]

[connection signal="pressed" from="ensiklopedia_container/prev" to="ensiklopedia_container" method="prevAction"]


